--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 li, a{
     font-family:'Montserrat', sans-serif; 
-    font-weight: 700;
+    font-weight: 500;
     text-decoration: none;
 }
 
@@ -90,7 +90,7 @@ nav ul a {
     border: none;
     background-color: white;
     width:5em;
-    
+        
     
 }
 
@@ -112,9 +112,9 @@ nav ul a {
 
 .principal{
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 3fr 1fr;
     padding: 6rem 3rem 6rem;
-    gap: 1rem;
+    
     
 }
 
@@ -122,6 +122,7 @@ h1{
     color: #313842;
     font-size: 45px;
     text-align: left;
+    
     
 }
 
@@ -131,6 +132,7 @@ h1{
     border-radius: 22px;
     font-size: 16px;
     padding: 3px;
+    margin-bottom: 2vh;
     color: white;
 }
 
@@ -173,4 +175,184 @@ h1{
     position: absolute;
     bottom: -30px;
     right: -30px;
+}
+
+aside{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    text-align: center;
+    margin-top: 9vh;
+    margin-bottom: 15vh;
+    margin-left: 7vh;
+    
+}
+
+aside div{
+    width: 24vw;
+}
+
+h2{
+    margin: 2vh 2vh;
+    font-size: 23px;
+    color: #2a3342;
+}
+
+h3{
+    color: #6f7c8b;
+    font-weight: 600;
+    font-size: 15px;
+}
+
+.mail{
+    background-color:#2ad167;
+    color: white;
+    height: auto;
+    width: auto;
+    padding: 17px 15px;
+    border-radius: 0.5em;
+    
+}
+
+.analytics{
+    background-color:#2ad167;
+    color: white;
+    height: auto;
+    width: auto;
+    padding: 17px 15px;
+    border-radius: 0.5em;
+    
+}
+
+.people{
+    background-color:#2ad167;
+    color: white;
+    height: auto;
+    width: auto;
+    padding: 14px 15px;
+    border-radius: 0.5em;
+}
+
+.h1Article{
+    margin-left: 2vw;
+    margin-top: 10vh;
+}
+
+.h2Article{
+    margin-left: 2vw;
+    color:#313842;
+    font-weight: 400;
+    font-size: 19px
+}
+
+.plans{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    text-align: center;
+    margin-top: 11vh;
+    align-content: center;
+    
+}
+
+.plans ul{
+    list-style: none;
+    
+}
+
+.plans div{
+    background-color: #90a2b80e;
+    width: 28vw;
+    margin: auto;
+
+}
+
+.plansPrecio{
+    color: #2ad167;
+    margin: 1.5em;
+    font-size: 10px;
+    font-weight: 700;
+}
+
+.plansTipo{
+    color: #2ad167;
+    margin: 1.5em;
+    font-weight: 700;
+    font-size: 25px;
+}
+
+.plansNumero{
+    color: #2a3342;
+    font-size: 25px;
+    margin: 1em;
+    font-weight: 600;
+}
+
+.plansFactura{
+    margin: 1.5em;
+}
+
+section ul li{
+    margin-top: 2vh;
+    text-align: left;
+    padding-left: 7.5vw;
+    font-size: 14px;
+}
+
+.buttonPlans{
+    border-style: none;
+    background-color: #2ad167;
+    color: white;
+    width: 16vw;
+    border-radius: 4px;
+    margin: 3vh;
+    padding: 0.9em;
+    font-weight: 550;
+
+}
+
+div ul li{
+    list-style-image: url();
+}
+
+footer{
+    background-color: #2a3342;
+    text-align: center;
+    min-height: 17em;
+    padding-top: 3em;
+    margin-top: 5vh;
+    font-weight: 500;
+    color: #90a2b8;
+    
+
+}
+
+footer ul{
+    display: flex;
+    margin: 2vh;
+    justify-content: center;
+    list-style: none;
+    gap: 3vw;
+    color: #90a2b8;
+    font-weight: lighter;
+    
+    
+}
+
+footer p{
+    padding-top: 3vh;
+    font-size: 14px;
+}
+
+
+.logoFlex2{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 550;
+    color: white;
+    font-size: 21px;
+    display: inline-block;
+    margin-bottom: 2vh;
+}
+
+.footerLogo{
+    display: inline-block;
 }
