--- a/style.css
+++ b/style.css
@@ -365,18 +365,15 @@ footer p{
     height: 100vh;
     width: 100vw;
     background-color: #2a3342;
-    display: flex;
+    display: grid;
     align-items: center;
     justify-content: center;
     opacity: 0;
     pointer-events: none;
+    grid-template-columns: 29vw 5vw;
     
-    
-
+  
 }
-
-
-
 
 .show{
     opacity: 1;
@@ -385,27 +382,120 @@ footer p{
 
 form{
     width: 29vw ;
-    background-color: #6f7c8b;
     max-width: 100%;
     text-align: center;
+    display: grid;
+    padding: 2em;
     
 }
 
 .h1Form{
     text-align: center;
     display: inline-block;
+    margin-bottom: 1vh;
+    color: white;
+    font-size: 24px;
+    margin-top: 3vh;
 }
 
+form p{
+    margin-bottom: 3vh;
+    color:#a6bbd4;
+    font-weight: 500;
+}
+
+form label{
+    margin-bottom: 0.7vh;
+    margin-top: 2vh;
+    color: white;
+    text-align: left;
+    margin-left: 1.7vw;
+    font-size: 14px;
+    
+}
+
+form button{
+    border-style: none;
+    margin: 34px ;
+    background-color: #2ad167;
+    border-radius: 4px;
+    color: white;
+    padding: 1em;
+    font-weight: 550;
+}
+
+form input{
+    width: 22.2vw;
+    margin: auto;
+    border-radius: 4px;
+    border-style: none;
+    padding: 1em;
+
+}
+
+.formCheck{
+    width: 1vw;
+}
+ 
 .close{
     text-decoration: none;
     color: white;
+    display: inline-block
+     
+}
+.contX{
     display: inline-block;
-    top: 0;
+    position: absolute;
     right: 0;
+    top: 0;
+    margin-right: 2vw;
+    margin-top: 2vh;
+    font-size: 2em;
+}
+.rememberMe{
+    color: white;
+    font-size: 12px;
     
+}
+.divRemember{
+    margin-top: 1vh;
+    text-align: left;
+    margin-left: 1.6vw;
+    display: inline-block;
+}
 
+.forgot{
+    color: #2ad167;
+    font-size: 12px;
+    text-align: right;
+    display: inline-block;
+
+
+}
+
+.divForgot{
+    text-align: right;
+    display:inline-block;
+    margin-left: 10vw;
+}
+
+form img{
+    max-width: 3vw;
+    max-height: 5vh;
+    margin: auto;
+    background-color:#2ad167 ;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.aun{
+    color: white;
+    font-size: 12px;
     
-
-       
+}
+.ultRegis{
+    color: #2ad167;
+    font-size: 12px;
+    margin-top: 1vh;
     
 }
